crates/hird-lex/tests/snapshots/snapshots__fat_arrow_ascii.snap
---
source: crates/hird-lex/tests/snapshots.rs
expression: "snapshot(\"x => y\")"
---
Ident                              0..1   "x"
FatArrow                           2..4   "=>"
Ident                              5..6   "y"
