crates/hird-lex/tests/snapshots/snapshots__keywords_all.snap
---
source: crates/hird-lex/tests/snapshots.rs
expression: "snapshot(\"let fn match type actor supervisor effect tool \\\n         handle spawn send request reply use module pub opaque extern if then else in\",)"
---
Let                                0..3   "let"
Fn                                 4..6   "fn"
Match                              7..12  "match"
Type                              13..17  "type"
Actor                             18..23  "actor"
Supervisor                        24..34  "supervisor"
Effect                            35..41  "effect"
Tool                              42..46  "tool"
Handle                            47..53  "handle"
Spawn                             54..59  "spawn"
Send                              60..64  "send"
Request                           65..72  "request"
Reply                             73..78  "reply"
Use                               79..82  "use"
Module                            83..89  "module"
Pub                               90..93  "pub"
Opaque                            94..100 "opaque"
Extern                           101..107 "extern"
If                               108..110 "if"
Then                             111..115 "then"
Else                             116..120 "else"
In                               121..123 "in"
