crates/hird-lex/tests/snapshots/snapshots__lambda_ascii.snap
---
source: crates/hird-lex/tests/snapshots.rs
expression: "snapshot(\"\\\\x\")"
---
Lambda                             0..1   "\\"
Ident                              1..2   "x"
