crates/hird-lex/tests/snapshots/snapshots__lambda_unicode.snap
---
source: crates/hird-lex/tests/snapshots.rs
expression: "snapshot(\"\\u{03bb}x\")"
---
Lambda                             0..2   "λ"
Ident                              2..3   "x"
